# epitome

./: .buildinfo  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  tox.ini
.doctrees/: environment.pickle  index.doctree
.doctrees/support/: contact.doctree  contribute.doctree  help.doctree
.github/workflows/: stable-cicd.yaml  unstable-cicd.yaml
_sources/support/: help.rst.txt
docs/source/: conf.py  index.rst
html/: genindex.html  search.html  searchindex.js
html/.doctrees/: environment.pickle
html/.doctrees/support/: contribute.doctree  help.doctree
html/support/: contribute.html  help.html
src/pds/epitome/: main.py
support/: contact.html  contribute.html  help.html
tests/pds/your_package_name/: test_example.py
